--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   "author": "Chew Phuay Hern",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
+    "express-mysql-session": "^2.1.5",
     "express-session": "^1.15.6",
     "flash-messenger": "^1.1.1",
     "handlebars": "^4.5.0",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
